# ecommerce-microservices-docker

./: .gitignore  Makefile  README.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
deploy/: .env.example  docker-compose.yaml
deploy/monitoring/: prometheus.yaml
docs/: apis.md  architecture.md  dashboard.json  events.md
gateway/: README.md
scripts/: gen-service-reqs.ps1  gen-service-reqs.py  rebuild.ps1  rebuild.py  repair-migrations.ps1  run_demo.ps1  run_demo.py  run_demo.sh  seed-heads.ps1  seed.ps1  seed.py  seed.sh  setup.ps1  setup.py  setup.sh
services/auth/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/auth/alembic/: env.py
services/auth/alembic/versions/: 20250823142355_init_auth.py
services/auth/app/: main.py
services/auth/app/api/: deps.py
services/auth/app/api/v1/: routes_auth.py  routes_users.py  schemas.py
services/auth/app/core/: config.py
services/auth/app/db/: models.py  session.py
services/auth/app/security/: utils.py
services/auth/ecom_auth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/cart/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/cart/app/: main.py
services/cart/app/api/: routes.py
services/cart/app/core/: auth.py  config.py
services/cart/app/store/: cart_store.py
services/cart/ecom_cart.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/catalog/: README.md  pyproject.toml  requirements.txt
services/catalog/alembic/: env.py
services/catalog/alembic/versions/: 20250823142354_init_catalog.py
services/catalog/app/: main.py  schemas.py
services/catalog/app/api/: categories.py  deps.py  inventory.py  products.py
services/catalog/app/core/: auth.py  config.py
services/catalog/app/db/: models.py  session.py
services/catalog/app/services/: storage.py
services/catalog/ecom_catalog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/notifications/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/notifications/app/: main.py
services/notifications/app/api/: routes.py
services/notifications/app/core/: config.py
services/notifications/app/ecom_notifications.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
services/notifications/app/kafka/: consumer.py
services/notifications/ecom_notifications.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/order/: README.md  alembic.ini  pyproject.toml  requirements.txt
services/order/alembic/: env.py
services/order/alembic/versions/: 20250823142909_init_order.py
services/order/app/: main.py
services/order/app/api/: routes.py
services/order/app/core/: config.py
services/order/app/db/: models.py  session.py
services/order/app/kafka/: consumer.py  producer.py
services/order/ecom_order.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/payment/: README.md  pyproject.toml  requirements.txt
services/payment/app/: main.py
services/payment/app/api/: routes.py
services/payment/app/core/: config.py
services/payment/app/kafka/: producer.py
services/payment/ecom_payment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/shipping/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
services/shipping/alembic/: env.py
services/shipping/alembic/versions/: 20250825153000_init_shipping.py
services/shipping/app/: main.py
services/shipping/app/api/: routes.py
services/shipping/app/core/: config.py
services/shipping/app/db/: models.py  session.py
services/shipping/app/ecom_shipping.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/shipping/app/kafka/: consumer.py  producer.py
services/shipping/ecom_shipping.egg-info/: PKG-INFO  SOURCES.txt
