
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecom-cart"
version = "0.1.0"
description = "Cart service (Redis-backed)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.5.0",
    "redis>=5.0.4",
    "httpx>=0.27.0",
    "PyJWT>=2.9.0",
]

[tool.setuptools.packages.find]
where = [""]
include = ["app*"]
