[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecom-cart"
version = "0.1.0"
description = "Cart service (Redis-backed)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "pydantic==2.11.7",
    "redis==6.4.0",
    "httpx==0.28.1",
    "PyJWT==2.10.1",
    "prometheus-fastapi-instrumentator==7.1.0",
]

[tool.setuptools.packages.find]
where = [""]
include = ["app*"]