
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "ecom-catalog"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.5.0",
  "sqlalchemy>=2.0.25",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.1.10",
  "python-multipart>=0.0.9",
  "minio>=7.2.5",
  "PyJWT>=2.9.0",        
]
[tool.setuptools.packages.find]
where = [""]
include = ["app*"]
