[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecom-notifications"
version = "0.1.0"
description = "E-commerce Notifications microservice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.7.0",
    "kafka-python==2.0.2",
]

[tool.setuptools.packages.find]
where = [""]
include = ["app*"]

