
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecom-payment"
version = "0.1.0"
description = "Payment mock service (Kafka events)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.5.0",
    "kafka-python>=2.0.2",
]

[tool.setuptools.packages.find]
where = [""]
include = ["app*"]
