[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecom-shipping"
version = "0.1.0"
description = "E-commerce Shipping microservice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.7.0",
    "SQLAlchemy==2.0.31",
    "psycopg[binary,pool]==3.2.1",
    "alembic==1.13.2",
    "kafka-python==2.0.2",
    "httpx==0.27.0",
]

[tool.setuptools.packages.find]
where = [""]
include = ["app*"]

