[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecom-shipping"
version = "0.1.0"
description = "E-commerce Shipping microservice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "pydantic[email]==2.11.7",
    "SQLAlchemy==2.0.43",
    "psycopg[binary,pool]==3.2.9",
    "alembic==1.16.4",
    "kafka-python==2.2.15",
    "httpx==0.28.1",
    "prometheus-fastapi-instrumentator==7.1.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "httpx", "requests"]
dev = ["pytest", "black", "flake8", "mypy", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = [""]
include = ["app*"]